# crawlerdetect

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest-report.xml  setup.cfg  setup.py  update_data.sh
.github/workflows/: python-package.yml
crawlerdetect/: __init__.py  __main__.py  cli.py  crawlerdetect.py
crawlerdetect/providers/: __init__.py  base.py  crawlers.py  exclusions.py  headers.py
crawlerdetect/src/: crawlerdetect.py
crawlerdetect/src/providers/: __init__.py  crawlers.py  exclusions.py  headers.py
tests/: base_case.py  test_crawlerdetect.py
tests/fixtures/: crawlers.txt  headers.json
tests/fixtures/sec_ch_ua/: crawlers.txt  devices.txt
tests/fixtures/user_agent/: crawlers.txt
