[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[nosetests]
verbosity = 2
nocapture = true
exclude = (?:^tests$)
with-coverage = true
cover-package = crawlerdetect
cover-erase = true
cover-min-percentage = 40

[flake8]
# H306: imports not in alphabetical order (time, os)
ignore = H306
max_line_length = 175
exclude = .eggs, .git, .tox, build,

[crawlerdetect]
version = 0.1.7
author = Vitalii Shishorin
email = moskrc@gmail.com
url = https://github.com/moskrc/CrawlerDetect
